# fizzbuzz-rust

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs  main.rs
tests/: cli.rs
