[package]
name = "fizzbuzz"
version = "0.1.0"
authors = ["Koji Tanaka <tenkoma@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap_builder = "4.5"
clap_derive = "4.5"

[dev-dependencies]
assert_cmd = "2"
